# nextgraph-rs

./: .gitignore  .prettierrc.json  CHANGELOG.md  Cargo.toml  DEV-ALLELO.md  DEV.md  LICENSE  LICENSE-APACHE2  LICENSE-MIT  README.md  RELEASE-NOTE.md  bun.lockb  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  typedoc.json
nextgraph/: .gitignore  Cargo.toml  README.md
nextgraph/examples/: README.md  in_memory.md  in_memory.rs  open.md  open.rs  persistent.rs  sparql_update.rs
nextgraph/src/: lib.rs  local_broker.rs  local_broker_dev_env.rs
nextgraph/src/tests/: mod.rs  orm.rs
ng-app/: .gitignore  Cargo.toml  README.md  build.rs  index-native.html  index-web.html  package.json  pnpm-lock.yaml  prepare-app-file.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
ng-app-js/: Cargo.toml  LICENSE-MIT  README.md  index.html  prepare-node.js
ng-app-js/app-node/: index.js  package.json  test.js
ng-app-js/app-react/: README.md  package-lock.json  package.json
ng-app-js/app-react/public/: index.html
ng-app-js/app-react/src/: index.jsx  test.js
ng-app-js/app-web/: LICENSE-APACHE  bootstrap.js  index.html  index.js  package.json  test.js
ng-app-js/js/: node.js
ng-app-js/src/: client_connection.rs  lib.rs
ng-app-web/: Cargo.toml  LICENSE-APACHE2  README.md  index.html
ng-app/src/: App.svelte  api.ts  base64url.js  classes.ts  lib.rs  main-web.ts  main.ts  store.ts  styles.css  tab.ts  turtle.js  wallet_emojis.ts  worker.js  workertest.js  zeras.ts
ng-app/src-tauri/: Cargo.toml  tauri.conf.json
ng-app/src-tauri/icons/: icon.icns
ng-app/src-tauri/src/: lib.rs  main.rs  mobile.rs
ng-app/src/apps/: AutomergeEditor.svelte  AutomergeJsonSource.svelte  AutomergeViewer.svelte  CodeMirrorEditor.svelte  ContactEditor.svelte  ContainerView.svelte  ListView.svelte  MdSource.svelte  MilkDownEditor.svelte  PostMdViewer.svelte  ProfileEditor.svelte  ProfileQrCode.svelte  ProseMirrorEditor.svelte  ProseMirrorViewer.svelte  SocialQueryDemo.svelte  SparqlQueryEditor.svelte  SparqlUpdateEditor.svelte  TextViewer.svelte  XmlSource.svelte  (+8 more)
ng-broker/: Cargo.toml  README.md
ng-broker/src/: interfaces.rs  lib.rs  rocksdb_server_storage.rs  server.rs  server_broker.rs  server_storage.rs  server_ws.rs  types.rs  utils.rs
ng-client-ws/: Cargo.toml  README.md
ng-client-ws/src/: remote_ws.rs  remote_ws_wasm.rs
ng-net/: Cargo.toml  README.md
ng-net/src/: actor.rs  app_protocol.rs  broker.rs  broker_connection.rs  bsps.rs  connection.rs  errors.rs  lib.rs  orm.rs  server_broker.rs  server_storage.rs  types.rs  utils.rs
ng-oxigraph/: Cargo.toml  LICENSE-MIT  README.md
ng-oxigraph/src/: lib.rs  model.rs  store.rs
ng-oxigraph/tests/: store.rs
ng-repo/: Cargo.toml  README.md
ng-repo/src/: block.rs  block_storage.rs  branch.rs  commit.rs  errors.rs  event.rs  file.rs  kcv_storage.rs  kcv_store.rs  lib.rs  object.rs  os_info.rs  repo.rs  site.rs  store.rs  types.rs  utils.rs
ng-sdk-js/: Cargo.toml  DEV.md  LICENSE-APACHE2  LICENSE-MIT  README.md  index.html  prepare-node.js
ng-sdk-js/app-node/: README.md  index.js  package-lock.json  package.json  test.js
ng-sdk-js/app-react/: LICENSE-APACHE  LICENSE-MIT  README.md  package.json  webpack.config.js
ng-sdk-js/app-web/: LICENSE-MIT  README.md  bootstrap.js  index.html  index.js  package.json  test.js
ng-sdk-js/example-webapp-react/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
ng-sdk-js/example-webapp-react-socialquery/: README.md  index.html  package-lock.json  package.json
ng-sdk-js/example-webapp-vite/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ng-sdk-js/js/: bowser.js  browser.js  node.js
ng-sdk-js/src/: lib.rs  model.rs
ng-sdk-python/: .gitignore  Cargo.toml  README.md  pyproject.toml  test.py
ng-sdk-python/src/: lib.rs
ng-storage-rocksdb/: Cargo.toml  README.md
ng-storage-rocksdb/src/: block_storage.rs  kcv_storage.rs  lib.rs
ng-stores-lmdb/: Cargo.toml
ng-stores-lmdb/src/: repo_store.rs
ng-verifier/: Cargo.toml  README.md  build.rs
ng-verifier/src/: inbox_processor.rs  lib.rs  orm.rs  request_processor.rs  rocksdb_user_storage.rs  site.rs  types.rs  user_storage.rs  verifier.rs
ng-wallet/: Cargo.toml  README.md
ng-wallet/src/: bip39.rs  emojis.rs  lib.rs  types.rs
ng-wallet/tests/: generated_security_image.jpg.compare
ngaccount/: .env  Cargo.toml  README.md
ngaccount/src/: main.rs  types.rs
ngaccount/web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.js
ngcli/: Cargo.toml  README.md
ngcli/src/: get.rs  main.rs  old.rs
ngd/: Cargo.toml  README.md
ngd/docker/: Dockerfile.alpine  Dockerfile.fedora  Dockerfile.ubuntu
ngd/src/: cli.rs  main.rs  types.rs
ngone/: Cargo.toml  README.md
ngone/data/: data.mdb  lock.mdb
ngone/src/: main.rs  types.rs
ngone/web/: index.html  package.json  pnpm-lock.yaml
p2p-broker/: Cargo.toml
p2p-broker/src/: auth.rs  broker_store_account.rs  broker_store_overlay.rs  broker_store_peer.rs  broker_store_topic.rs  connection_local.rs  interfaces.rs  lib.rs  server.rs  server_connection.rs  server_storage.rs  server_ws.rs  storage.rs  types.rs  utils.rs
p2p-client/: Cargo.toml
p2p-client-ws/: Cargo.toml
p2p-client-ws/src/: connection_ws.rs  lib.rs  remote_ws.rs  remote_ws_wasm.rs
p2p-client/src/: connection_remote.rs  connection_ws.rs  lib.rs
p2p-net/: Cargo.toml
p2p-net/src/: actor.rs  broker.rs  broker_connection.rs  broker_storage.rs  connection.rs  errors.rs  lib.rs  server_storage.rs  site.rs  types.rs  utils.rs
p2p-repo/: Cargo.toml
p2p-repo/src/: block.rs  branch.rs  broker_store.rs  commit.rs  errors.rs  file.rs  kcv_store.rs  lib.rs  object.rs  repo.rs  site.rs  store.rs  types.rs  utils.rs
p2p-stores-lmdb/: Cargo.toml
p2p-stores-lmdb/src/: broker_store.rs  lib.rs  repo_store.rs
p2p-verifier/: Cargo.toml
stores-lmdb/: Cargo.toml
stores-lmdb/src/: kcv_store.rs  repo_store.rs
stores-rocksdb/: Cargo.toml
stores-rocksdb/src/: kcv_store.rs  lib.rs  repo_store.rs
(+1850 files in other folders)
