[workspace]
members = [
  "nextgraph",
  "ngcli",
  "ngd",
  "ng-repo",
  "ng-net",
  "ng-broker",
  "ng-client-ws",
  "ng-verifier",
  "ng-wallet",
  "ng-storage-rocksdb",
  "ngone",
  "ngaccount",
  "ng-sdk-js",
  "ng-app/src-tauri",
  "ng-oxigraph",
]
default-members = [ "nextgraph", "ngcli",  "ngd" ]

[workspace.package]
version = "0.1.0-preview.1"
edition = "2021"
rust-version = "1.74.0"
license = "MIT/Apache-2.0"
authors = ["Niko PLP <niko@nextgraph.org>"]
repository = "https://git.nextgraph.org/NextGraph/nextgraph-rs"
homepage = "https://nextgraph.org"
keywords = [
"crdt","dapp","decentralized","e2ee","local-first","p2p","semantic-web","eventual-consistency","json-ld","markdown",
"ocap","z-cap","offline-first","p2p-network","collaboration","privacy-protection","rdf","rich-text-editor","self-hosted",
"sparql","byzantine-fault-tolerance",
"web3", "graph-database", "database","triplestore"
]
documentation = "https://docs.nextgraph.org/"

[profile.release]
lto = true
opt-level = 's'

[patch.crates-io]
# tauri = { git = "https://github.com/simonhyll/tauri.git",  branch="fix/ipc-mixup"}
# tauri = { git = "https://git.nextgraph.org/NextGraph/tauri.git", branch="alpha.11-nextgraph", features = ["no-ipc-custom-protocol"] }
