[workspace]
resolver = "2"
members = [
  "engine/repo",
  "engine/net",
  "engine/broker",
  "engine/client-ws",
  "engine/verifier",
  "engine/wallet",
  "engine/storage-rocksdb",
  "engine/oxigraph",
  "sdk/rust",
  "sdk/js/lib-wasm",
  "sdk/python",
  "bin/ngd",
  "bin/ngcli",
  "infra/ngaccount",
  "infra/ngapp",
  "infra/ngnet",
  "app/nextgraph/src-tauri"
]
default-members = ["sdk/rust"]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.81.0"
license = "MIT/Apache-2.0"
authors = ["Niko PLP <niko@nextgraph.org>"]
repository = "https://git.nextgraph.org/NextGraph/nextgraph-rs"
homepage = "https://nextgraph.org"
keywords = [
  "crdt",
  "dapp",
  "decentralized",
  "e2ee",
  "local-first",
  "p2p",
  "semantic-web",
  "eventual-consistency",
  "json-ld",
  "markdown",
  "ocap",
  "vc",
  "offline-first",
  "p2p-network",
  "collaboration",
  "privacy-protection",
  "rdf",
  "rich-text-editor",
  "self-hosted",
  "sparql",
  "byzantine-fault-tolerance",
  "web3",
  "graph-database",
  "database",
  "triplestore",
]
documentation = "https://docs.nextgraph.org/"

[profile.release]
lto = true
opt-level = 's'

[profile.test]
opt-level = 1
debug = "full"

[profile.dev]
opt-level = 2

[patch.crates-io]
# tauri = { git = "https://github.com/simonhyll/tauri.git",  branch="fix/ipc-mixup"}
# tauri = { git = "https://git.nextgraph.org/NextGraph/tauri.git", branch="alpha.11-nextgraph", features = ["no-ipc-custom-protocol"] }

[workspace.dependencies]


[workspace.metadata.scripts]
libwasm = "cd sdk/js/lib-wasm && cargo run-script app && cd ../../.."
libwasmdev3 = "cd sdk/js/lib-wasm && cargo run-script appdev3 && cd ../../.."