[package]
name = "ng-app-web"
description = "NextGraph Official Web App"
publish = true
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
rust-embed= { version = "6.7.0", features=["include-exclude"] }