[package]
name = "ng-repo"
# version = "0.1.0-preview.1"
description = "Repository library of NextGraph, a decentralized, secure and local-first web 3.0 ecosystem based on Semantic Web and CRDTs"
categories = ["asynchronous","database-implementations"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = [
"crdt","e2ee","local-first","p2p","collaboration"]
documentation.workspace = true
rust-version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[features]
server_log_output = []
testing = []

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
serde_bare = "0.5.0"
serde_bytes = "0.11.7"
serde_json = "1.0"
once_cell = "1.17.1"
futures = "0.3.24"
num_enum = "0.5.7"
slice_as_array = "1.1.0"
rand =  { version = "0.7", features = ["getrandom"] }
blake3 = "1.3.1"
chacha20 = "0.9.0"
ed25519-dalek = "1.0.1"
bloomfilter = { version = "1.0.13", features = ["random","serde"] }
curve25519-dalek = "3.2.0"
threshold_crypto = "0.4.0"
crypto_box = { version = "0.8.2", features = ["seal"] }
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
base64-url = "2.0.0"
web-time = "0.2.0"
time = { version= "0.3.36", features = ["formatting"] }
wasm-bindgen = "0.2"
os_info = "3"
current_platform = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
debug_print = "1.0.0"
log = "0.4"
getrandom = "0.2.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.2.6"