[package]
name = "ng-sdk-js"
# version = "0.1.0"
description = "JS app sdk of NextGraph"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
documentation.workspace = true
rust-version.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
ws_stream_wasm = "0.7" 
ng-net = { path = "../ng-net" }
ng-repo = { path = "../ng-repo" }
ng-client-ws = { path = "../ng-client-ws" }
ng-wallet = { path = "../ng-wallet" }
once_cell = "1.17.1"
nextgraph = { path = "../nextgraph" }
async-std = {  version = "1.12.0", features = ["attributes","unstable"] }
futures = "0.3.24"
pharos = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_bare = "0.5.0"
serde_bytes = "0.11.7"
# snow = "0.9.2"
getrandom = { version = "0.1.1", features = ["wasm-bindgen"] }
serde_json = "1.0"
rand =  { version = "0.7", features = ["getrandom"] }
base64-url = "2.0.0"

# [target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
# version = "0.2.7"
# features = ["js"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.61"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4.34"
# web-sys = { version = "0.3.61", features = ["Window"] }
gloo-timers = "0.2.6"

[dev-dependencies]
wasm-bindgen-test = "^0.3"