[package]
name = "ng-sdk-js"
version = "0.1.1"
description = "JS app SDK of NextGraph"
publish = false
# version.workspace = true
edition.workspace = true
license = "MIT/Apache-2.0"
authors.workspace = true
repository = "https://git.nextgraph.org/NextGraph/nextgraph-rs" 
homepage = "https://nextgraph.org"
keywords.workspace = true
documentation.workspace = true
rust-version.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.scripts]
appdev = "rm -rf pkg && wasm-pack build --target bundler"
app = "rm -rf pkg && wasm-pack build --target bundler"
nodedev = "rm -rf pkg-node && wasm-pack build --dev -t nodejs -d pkg-node && node prepare-node.js"
node = "rm -rf pkg-node && wasm-pack build -t nodejs -d pkg-node && node prepare-node.js"
web = "rm -rf web && wasm-pack build --target web -d web"
webdev = "rm -rf web && wasm-pack build --dev --target web -d web"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bare = "0.5.0"
serde_bytes = "0.11.7"
async-std = {  version = "1.12.0", features = ["attributes","unstable"] }
once_cell = "1.17.1"
getrandom = { version = "0.1.1", features = ["wasm-bindgen"] }
rand =  { version = "0.7", features = ["getrandom"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
sys-locale = { version = "0.3.1", features = ["js"] }
futures = "0.3.24"
ng-repo = { path = "../ng-repo" }
ng-net = { path = "../ng-net" }
ng-client-ws = { path = "../ng-client-ws" }
ng-wallet = { path = "../ng-wallet" }
nextgraph = { path = "../nextgraph" }
oxrdf = { git = "https://git.nextgraph.org/NextGraph/oxigraph.git",  branch="main", features = ["rdf-star", "oxsdatatypes"] }
# [target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
# version = "0.2.7"
# features = ["js"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.61"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4.34"
gloo-timers = "0.2.6"
# web-sys = { version = "0.3.61", features = ["Window"] }

[dev-dependencies]
wasm-bindgen-test = "^0.3"