[package]
name = "ng-storage-rocksdb"
# version = "0.1.0"
description = "Stores based on RocksDB for NextGraph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["crdt","e2ee","local-first","p2p","database"]
documentation.workspace = true
rust-version.workspace = true

[dependencies]
serde_bare = "0.5.0"
ng-repo = { path = "../ng-repo", version = "0.1.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.rocksdb]
git = "https://git.nextgraph.org/NextGraph/rust-rocksdb.git"
branch = "master"
features = [  ]
